--- a/论文时间.md
+++ b/论文时间.md
@@ -1,11 +1,10 @@
-### 第一步
-1. 确定论文题目，找老师谈(12.5之前)
-	- 主题：想说个什么东西
-	- 论据: 找支撑的资料
+### 第一步:确定论文题目，找老师谈(12.5之前)
+	- 调查对象
+	- 背景
+	- 目标
+	- 有什么用
 
-2. 开题报告，(12.12之前)
+### 第二步:开题报告，(12.12之前)
 	- 按模板
 
-3. 
-
-4. 
+### 第三步:初稿(3.1)
