--- a/调查报告.md
+++ b/调查报告.md
@@ -1,7 +1,5 @@
 ### 目的
-提高用户数
-	- 新增用户数
-	- 留存
+提高用户数：新增用户数 & 留存
 
 ### 调查收集
 1. 用户画像
@@ -10,7 +8,6 @@
 	- APP使用满意度，住宿各维度(价格，安全，环境等)的满意度
 	- 基于场景的应用使用情况(如：搜索功能是否能第一时间呈现想要的结果)
 3. 用户建议
-
 
 ### 调查分析
 1. 通过用户画像，找到用户特点，从而提出让广告投放更精准的建议(如广告关键词，投放位置等)，从而提高新增
