--- a/调查报告.md
+++ b/调查报告.md
@@ -4,7 +4,7 @@
 ### 调查收集
 1. 用户画像
 	- 性别，年龄，性格，收入，常用APP类型，社区类型
-2. 用户s使用情况
+2. 用户使用情况
 	- APP使用满意度，住宿各维度(价格，安全，环境等)的满意度
 	- 基于场景的应用使用情况(如：搜索功能是否能第一时间呈现想要的结果)
 3. 用户建议
