--- a/调查报告.md
+++ b/调查报告.md
@@ -11,5 +11,5 @@
 
 ### 调查分析
 1. 通过用户画像，找到用户特点，从而提出让广告投放更精准的建议(如广告关键词，投放位置等)，从而提高新增
-2. 通过用户满意度，找到用户的需求点及需求满足程度，找到产品的缺点及优点，提出相关建议，从而提高用户留存率
+2. 通过用户使用情况，找到用户的需求点及需求满足程度，找到产品的缺点及优点，提出相关建议，从而提高用户留存率
 3. 通过用户建议，收集用户需求，找到产品未来的可能性。
